AW-2914 fixed headline spacing for sharethis socialwidget on regular pages

--- a/sites/all/themes/custom/parliamentwatch/css/global.css
+++ b/sites/all/themes/custom/parliamentwatch/css/global.css
@@ -3633,6 +3633,7 @@ form .webform-component-checkboxes .description {
     background: transparent !important;
     border: 0 !important;
 }
+.node-type-page h2,
 .sharethis-wrapper + h1,
 .sharethis-wrapper + h2,
 .sharethis-wrapper + h3,
